<resources>
    <string name="app_name">热泵计算</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>

    <string name="t_wai">输入二次水入口温度（˚C）</string>
    <string name="t_wco">输入二次水出口温度（˚C）</string>
    <string name="t_wei">输入低品质热源入口温度（˚C）</string>
    <string name="t_weo">输入低品质热源出口温度（˚C）</string>
    <string name="commit">确认</string>
    <string name="clearInput">重置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_pump_fragment">Hello Pump fragment</string>

    <string name="hello_cal_cop_fragment">Hello COP fragment</string>

    <string name="hello_cal_libr_fragment">Hello LiBr fragment</string>


    <string name="cal_h2o_lgsvp">计算饱和蒸汽压（℃）</string>
    <string name="cal_h2o_st">计算饱和温度(kPa)</string>
    <string name="cal_h2o_enthalpy">水的焓值（℃）</string>
    <string name="cal_h2o_vapor_enthalpy">水蒸气的焓值（℃）</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
