<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lyn.librpump.fragment.CalCOPFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText android:id="@+id/t_wai"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:numeric="decimal"
            android:text="50"
            android:hint="@string/t_wai" />

        <EditText android:id="@+id/t_wco"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:numeric="decimal"
            android:text="70"
            android:hint="@string/t_wco" />

        <EditText android:id="@+id/t_wei"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:numeric="decimal"
            android:text="50"
            android:hint="@string/t_wei" />

        <EditText android:id="@+id/t_weo"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:numeric="decimal"
            android:text="30"
            android:hint="@string/t_weo" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/clearInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:buttonMode="regular"
            app:bootstrapBrand="warning"
            app:bootstrapSize="lg"
            android:hint="@string/clearInput"
            android:onClick="clearInput" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/createPump"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:bootstrapBrand="success"
            app:buttonMode="regular"
            app:bootstrapSize="lg"
            android:hint="@string/commit"
            android:onClick="createPump" />

    </LinearLayout>

</FrameLayout>
