<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="lyn.librpump.fragment.CalH2OFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linear_row_height"
        android:orientation="horizontal">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/textfield_lgsvp"
            android:numeric="decimal"
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="@dimen/edit_text_height"
            android:paddingRight="@dimen/eight_margin"
            android:paddingBottom="@dimen/edit_text_bottom"
            android:hint="@string/cal_h2o_lgsvp"
            app:met_baseColor="@color/colorControlNormalHalf"
            app:met_primaryColor="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_helperTextColor="@color/colorControlActivated"
            />
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/button_lgsvp"
            android:layout_width="40dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:text="计算"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linear_row_height"
        android:orientation="horizontal">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/textfield_st"
            android:numeric="decimal"
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="@dimen/edit_text_height"
            android:paddingRight="@dimen/eight_margin"
            android:paddingBottom="@dimen/edit_text_bottom"
            android:hint="@string/cal_h2o_st"
            app:met_baseColor="@color/colorControlNormalHalf"
            app:met_primaryColor="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_helperTextColor="@color/colorControlActivated"
            />
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/button_st"
            android:layout_width="40dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:text="计算"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linear_row_height"
        android:orientation="horizontal">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/textfield_enthalpy"
            android:numeric="decimal"
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="@dimen/edit_text_height"
            android:paddingRight="@dimen/eight_margin"
            android:paddingBottom="@dimen/edit_text_bottom"
            android:hint="@string/cal_h2o_enthalpy"
            app:met_baseColor="@color/colorControlNormalHalf"
            app:met_primaryColor="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_helperTextColor="@color/colorControlActivated"
            />
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/button_enthalpy"
            android:layout_width="40dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:text="计算"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linear_row_height"
        android:orientation="horizontal">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/textfield_vapor_enthalpy"
            android:numeric="decimal"
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="@dimen/edit_text_height"
            android:paddingRight="@dimen/eight_margin"
            android:paddingBottom="@dimen/edit_text_bottom"
            android:hint="@string/cal_h2o_vapor_enthalpy"
            app:met_baseColor="@color/colorControlNormalHalf"
            app:met_primaryColor="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_helperTextColor="@color/colorControlActivated"
            />
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/button_vapor_enthalpy"
            android:layout_width="40dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:text="计算"
            />

    </LinearLayout>




    </LinearLayout>


</FrameLayout>
